# PM-Telegram-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_SPEC.md  nixpacks.toml  pyproject.toml  requirements.txt  run.py
src/polymarket_telegram_bot/: __init__.py  config.py  dedupe.py  enrichment.py  formatting.py  main.py  polymarket_stream.py  service.py  telegram_notifier.py  types.py
tests/: test_dedupe.py  test_enrichment.py  test_formatting.py  test_polymarket_stream.py  test_service_threshold.py
